--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.8"
   }
